<resources>
    <string name="app_name">Satisfactory Overclock Calculator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Calculator</string>
    <string name="numItems_hint">Number of Items</string>
    <string name="numPerMinute_hint">Normal per minute</string>
    <string name="minBuildings_label">Min # Buildings</string>
    <string name="minBuildings_default">0</string>
    <string name="numBuildings_hint">Number of Buildings</string>
    <string name="overclockPerc_label">Overclock %</string>
    <string name="overclockPerc_default">100%</string>
    <string name="item_label">Item</string>
    <string name="itemNeeded_label">Normal # Needed</string>
    <string name="itemTotalNeeded_label"># Needed per building</string>
    <string name="item_hint">Item</string>
    <string name="itemNeeded_hint">Normal # Needed</string>
    <string name="itemTotalNeeded_default">0</string>
    <string name="addRow_description">Add Row</string>
</resources>